--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,19 @@
 }
 
 .main {
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
+    background-color: #f8f9fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-container {
+    height: 50%;
+    width: 50%;
     background: url('./images/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    background-color: #f8f9fa;
 }
