--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,67 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Ubuntu Mono', monospace;
 }
 
 .main {
     width: 100vw;
     height: 100vh;
-    background-color: #f8f9fa;
+    background-color: #54585f;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .logo-container {
-    height: 50%;
-    width: 50%;
+    height: 65%;
+    width: 65%;
     background: url('./images/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    padding: 10px;
+    color: #fff;
+    background-color: rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    padding: 10px;
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.2);
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 1px 1px 15px whitesmoke;
+}
+
+.nav-list {
+    display: flex;
+    list-style: none;
+}
+
+.nav-item {
+    padding: 0 10px;
+    font-size: 1.4rem;
+    color: whitesmoke;
+}
+
+.nav-item a {
+    color: whitesmoke;
+    transition: all ease-in-out 0.5s;
+}
+
+.nav-item a i:hover {
+    color: rgb(19, 186, 241);
+    transform: scale(1.25);
 }
