--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
     position: absolute;
     top: 0;
     width: 100vw;
-    padding: 10px;
+    padding: 20px 10px;
     color: #fff;
     background-color: rgba(0,0,0,0.2);
     display: flex;
@@ -52,7 +52,7 @@
 }
 
 .nav-item {
-    padding: 0 10px;
+    padding: 0 15px;
     font-size: 1.4rem;
     color: whitesmoke;
 }
